# omim-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: OMIM_API.md  OMIM_Search_Help.md
omim/: omim_cli.py
omim/core/: api.py  downloads.py  parser_v2.py
omim/db/: manager.py
omim/version/: version.json
omim_cli/: __init__.py  omim_cli.py
omim_cli/core/: __init__.py  api.py  downloads.py  parser_v2.py
omim_cli/db/: __init__.py  manager.py  model.py
omim_cli/util/: __init__.py
omim_cli/version/: version.json
